# portfolio

./: .gitignore  README.md  pyproject.toml
portfolio/jobs/: models.py  urls.py  views.py
portfolio/jobs/migrations/: 0001_initial.py
portfolio/jobs/templates/jobs/: base.html  detail.html  home.html
portfolio/portfolio/: settings.py  urls.py
