[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Greg Milway <greg.milway@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
