[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Greg Milway <greg.milway@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
black = "^24.8.0"
pillow = "^10.4.0"
isort = "^5.13.2"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
